--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <li class="nav_item-ClickDropdown">
                             <div>
                                 <span>Giải pháp</span>
+                                <i class="fa-solid fa-caret-down"></i>
                             </div>
                             
                             <ul class="downcontent">
@@ -51,6 +52,7 @@
                         <li class="nav_item-ClickDropdown">
                             <div>
                                 <span>Tìm hiểu</span>
+                                <i class="fa-solid fa-caret-down"></i>
                             </div>
                             <ul class="downcontent">
                                 <li>
@@ -79,6 +81,7 @@
                         <li class="nav_item-ClickDropdown">
                             <div>
                                 <span>Sản phẩm khác</span>
+                                <i class="fa-solid fa-caret-down"></i>
                             </div>
                             <ul class="downcontent">
                                 <li>
