learn responsive and test

--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.4.0/fontawesome-free-6.4.0-web/css/all.min.css">
+<style> 
+@media (max-width: 800px) {
 
+}
+@media (min-width: 1241px) {
+    body {
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+}
+@media (min-width: 950px) {
+    .container_space {
+        padding-left: 50px;
+        padding-right: 50px;
+
+    }
+
+}
+
+
+</style>
 
 </head>
 <body>
