add text not complete yet

--- a/index.html
+++ b/index.html
@@ -13,24 +13,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.4.0/fontawesome-free-6.4.0-web/css/all.min.css">
 <style> 
-@media (max-width: 800px) {
-
-}
-@media (min-width: 1250px) {
-    body {
-        font-size: 16px;
-        line-height: 24px;
-    }
-
-}
-@media (min-width: 950px) {
-    .container_space {
-        padding-left: 50px;
-        padding-right: 50px;
-
-    }
-
-}
 
 
 </style>
@@ -126,6 +108,27 @@
         </div>
 
         </header>
+        <main>
+            <section class="introdution">
+                <div class="container">
+                    <div class="content-main">
+                        <div class="content">
+                            <h1 class="start">
+                                "xây dựng thương hiệu doanh nghiệp trên"
+                                <span>zalo</span>
+                                "với"
+                                <span>Official Account</span>
+
+                            </h1>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+        </main>
     </div>
 </body>
 </html>
