--- a/index.html
+++ b/index.html
@@ -120,7 +120,13 @@
                                 <span>Official Account</span>
 
                             </h1>
+                            <div class="sub-start">
+                                Zalo Official Account là tài khoản dành riêng cho Doanh nghiệp, tạo ra môi trường thuận lợi để tương tác với khách hàng, từ đó tăng cường nhận diện thương hiệu và sự tin tưởng của khách hàng trên nền tảng Zalo Tạo Official Account ngay
+                            </div>
 
+                        </div>
+                        <div class="images">
+                            <img src="https://stc-oa.zdn.vn/resources/zoa-landing/images/home/img_main.svg" alt="">
                         </div>
 
                     </div>
