--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             </div>
 
                         </div>
-                        <div class="images">
+                        <div class="images-start">
                             <img src="https://stc-oa.zdn.vn/resources/zoa-landing/images/home/img_main.svg" alt="">
                         </div>
 
