--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,132 +10,143 @@
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300;1,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.4.0/fontawesome-free-6.4.0-web/css/all.min.css">
-<style> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.4.0/fontawesome-free-6.4.0-web/css/all.min.css">
+    <style>
 
 
-</style>
+    </style>
 
 </head>
+
 <body>
     <div id="__second">
         <header id="header">
-        <div class="container_space">
-            <div class="logo">
-                <a class="block" >
-                    <img class="imgAuto" src="https://stc-oa.zdn.vn/resources/zoa-landing/images/logo.svg" alt>
+            <div class="container_space">
+                <div class="logo">
+                    <a class="block">
+                        <img class="imgAuto" src="https://stc-oa.zdn.vn/resources/zoa-landing/images/logo.svg" alt>
+                    </a>
+                </div>
+                <nav class="navi">
+                    <div class="nav_list">
+                        <ul class="flexbox">
+                            <li class="nav_item-ClickDropdown">
+                                <div>
+                                    <span>Giải pháp</span>
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+
+                                <ul class="downcontent">
+                                    <li>
+                                        <a href="">Chăm sóc khách hàng</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Xây dựng thương hiệu</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Kinh doang bán hàng</a>
+                                    </li>
+                                </ul>
+
+                            </li>
+                            <li class="nav_item">
+                                <span>Bảng giá</span>
+                            </li>
+                            <li class="nav_item-ClickDropdown">
+                                <div>
+                                    <span>Tìm hiểu</span>
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                                <ul class="downcontent">
+                                    <li>
+                                        <a href="">Hướng dẫn sử dụng</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Tin tức</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Câu chuyện thành công</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Chính sách</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Câu hỏi thường gặp</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav_item">
+                                <span>Liên hệ</span>
+                            </li>
+                            <li class="nav_item">
+                                <span>Nhà phát triển</span>
+                            </li>
+                            <li class="nav_item-ClickDropdown">
+                                <div>
+                                    <span>Sản phẩm khác</span>
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                                <ul class="downcontent">
+                                    <li>
+                                        <a href="">OA dành cho Cơ quan Hành Chính công</a>
+                                    </li>
+                                    <li>
+                                        <a href="">OA dành cho Báo Chí, Nghệ sĩ</a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                        </ul>
+
+                    </div>
+                </nav>
+                <a class="bluelist">
+                    <span>Danh sách OA của tôi</span>
+
                 </a>
             </div>
-            <nav class="navi">
-                <div class="nav_list">
-                    <ul class="flexbox">
-                        <li class="nav_item-ClickDropdown">
-                            <div>
-                                <span>Giải pháp</span>
-                                <i class="fa-solid fa-caret-down"></i>
-                            </div>
-                            
-                            <ul class="downcontent">
-                                <li>
-                                    <a href="">Chăm sóc khách hàng</a>
-                                </li>
-                                <li>
-                                    <a href="">Xây dựng thương hiệu</a>
-                                </li>
-                                <li>
-                                    <a href="">Kinh doang bán hàng</a>
-                                </li>
-                            </ul>
+    </div>
 
-                        </li>
-                        <li class="nav_item">
-                            <span>Bảng giá</span>
-                        </li>
-                        <li class="nav_item-ClickDropdown">
-                            <div>
-                                <span>Tìm hiểu</span>
-                                <i class="fa-solid fa-caret-down"></i>
-                            </div>
-                            <ul class="downcontent">
-                                <li>
-                                    <a href="">Hướng dẫn sử dụng</a>
-                                </li>
-                                <li>
-                                    <a href="">Tin tức</a>
-                                </li>
-                                <li>
-                                    <a href="">Câu chuyện thành công</a>
-                                </li>
-                                <li>
-                                    <a href="">Chính sách</a>
-                                </li>
-                                <li>
-                                    <a href="">Câu hỏi thường gặp</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav_item">
-                            <span>Liên hệ</span> 
-                        </li>
-                        <li class="nav_item">
-                            <span>Nhà phát triển</span>
-                        </li>
-                        <li class="nav_item-ClickDropdown">
-                            <div>
-                                <span>Sản phẩm khác</span>
-                                <i class="fa-solid fa-caret-down"></i>
-                            </div>
-                            <ul class="downcontent">
-                                <li>
-                                    <a href="">OA dành cho Cơ quan Hành Chính công</a>
-                                </li>
-                                <li>
-                                    <a href="">OA dành cho Báo Chí, Nghệ sĩ</a>
-                                </li>
-                            </ul>
-                        </li>
-
-                    </ul>
-                    
-                </div>
-            </nav>
-            <a class="bluelist">
-                <span>Danh sách OA của tôi</span>
-
-            </a>
-            </div>
-        </div>
-
-        </header>
-        <main>
-            <section class="introdution">
-                <div class="container">
-                    <div class="content-main">
-                        <div class="content">
-                            <h1 class="start">
-                                "xây dựng thương hiệu doanh nghiệp trên"
-                                <span>zalo</span>
-                                "với"
-                                <span>Official Account</span>
-
-                            </h1>
-                            <div class="sub-start">
-                                Zalo Official Account là tài khoản dành riêng cho Doanh nghiệp, tạo ra môi trường thuận lợi để tương tác với khách hàng, từ đó tăng cường nhận diện thương hiệu và sự tin tưởng của khách hàng trên nền tảng Zalo Tạo Official Account ngay
-                            </div>
-
-                        </div>
-                        <div class="images-start">
-                            <img src="https://stc-oa.zdn.vn/resources/zoa-landing/images/home/img_main.svg" alt="">
+    </header>
+    <main>
+        <section class="introdution">
+            <div class="container">
+                <div class="content-main">
+                    <!-- left introduction -->
+                    <div class="content">
+                        <p class="start">
+                            Xây dựng thương hiệu doanh nghiệp trên
+                            <b>Zalo</b>
+                            với
+                            <b>Official Account</b>
+                        </p>
+                        <div class="sub-start">
+                            <p>Zalo Official Account là tài khoản dành riêng cho Doanh nghiệp, tạo ra môi trường thuận
+                                lợi
+                                để tương tác với khách hàng, từ đó tăng cường nhận diện thương hiệu và sự tin tưởng của
+                                khách hàng trên nền tảng Zalo
+                            </p>
                         </div>
 
+                        <a class="signup-btn" href="#">Tạo Official Account ngay</a>
+                    </div>
+
+                    <!-- right introduction -->
+                    <div class="images-start">
+                        <img id="introduction-img"
+                            src="https://stc-oa.zdn.vn/resources/zoa-landing/images/home/img_main.svg" alt="">
                     </div>
 
                 </div>
 
-            </section>
-        </main>
+            </div>
+
+        </section>
+    </main>
     </div>
 </body>
+
 </html>
