--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                     </div>
                 </nav>
                 <a class="bluelist">
-                    <span>Danh sách OA của tôi</span>
+                    <span class="normal">Danh sách OA của tôi</span>
+                    <span class="zoom">Danh sách OA</span>
 
                 </a>
             </div>
